# F1Predict

./: .env.example  .gitattributes  .gitignore  Caddyfile  DEPLOY.md  F1Predict_ Stochastic Race Simulation Engine.md  README.md  docker-compose.edge.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/data/: backtest.json  calibration.json  car_dna.parquet  clean_air_pace.parquet  dirty_air.json  drivers.json  forward_backtest.json  grids.parquet  inplay_backtest.json  inplay_overlay.json  inplay_probe.json  laps.parquet  market_backtest.json  markets_snapshot.json  model_replay.json  openf1_clean_laps.parquet  overtaking_proxies.parquet  pirelli_compounds.json  practice.parquet  predict_default.json  qss_profiles.json  quali_market_backtest.json  results.parquet  team_tyres.json  telemetry_sig.parquet  track_outlines.json  track_positions.json  tyre_deg_car.parquet  tyre_degradation.json  weather.parquet
backend/tests/: test_benter.py  test_calibration.py  test_car_dna.py  test_championship_api.py  test_clean_air_pace.py  test_clean_anchor.py  test_dirty_air.py  test_engine_smoke.py  test_fastf1_contract.py  test_laptime_physics.py  test_market_discovery.py  test_markets.py  test_montecarlo.py  test_net_dnf.py  test_openf1.py  test_openf1_ingest.py  test_overtake_events.py  test_overtaking.py  test_pirelli.py  test_position_sim.py  test_predict_kalman.py  test_predict_quali.py  test_props.py  test_quali_market.py  test_replay.py  test_sc_index.py  test_season_sim.py  test_sim_ensemble.py  (+6 more)
(+169 files in other folders)
